# SupermarketList

./: .gitignore  README.md  config.ini  config.py  logging_config.py  main.py  pyproject.toml
supermarketlist/: SupermarketList.py  database.py  models.py  schemas.py
